Fixed more issue on header/footer responsive and non-responsive: - Border issue on mobile nav (medium, small and x-small devices) - Increase autocomplete result font-size

--- a/static/bootstrap/custom/quest/_header-footer.scss
+++ b/static/bootstrap/custom/quest/_header-footer.scss
@@ -757,9 +757,9 @@ i.menu-indicator {
 				height: auto !important;
 				> li {
 					border-bottom: 1px solid $nav-xs-border-bottom-color-t3 !important;
-					&:last-child {
+					/*&:last-child {
 						border-bottom: none !important;
-					}
+					}*/
 				}
 			}
 			&.tier4 {
