--- a/static/styles/collective/_collective.scss
+++ b/static/styles/collective/_collective.scss
@@ -5947,6 +5947,7 @@ ul#oo-toolbar span {
 	line-height: 30px;
 	padding: 0 10px 0 15px;
 	color: $link-color;
+	font-size: 16px;
 	&:hover {
 		color: $link-color;
 	}
